# zvuk-music

./: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  LICENSE  README.md  README.ru.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/get-version/: action.yml
.github/workflows/: auto-pr.yml  auto-release.yml  publish.yml  tests.yml
examples/: async_example.py  quick_start.py  test_api_methods.py
scripts/: generate_async_version.py  zvuk_cli.py
tests/: __init__.py  conftest.py  test_base.py  test_client.py  test_exceptions.py  test_request_errors.py  test_utils.py
tests/test_models/: __init__.py  test_artist.py  test_book.py  test_collection.py  test_common.py  test_playlist.py  test_podcast.py  test_profile.py  test_release.py  test_search.py  test_stream.py  test_track.py
zvuk_music/: __init__.py  base.py  client.py  client_async.py  enums.py  exceptions.py
zvuk_music/graphql/mutations/: addItemToCollection.graphql  addItemToHidden.graphql  addTracksToPlaylist.graphql  createPlaylist.graphql  deletePlaylist.graphql  removeItemFromCollection.graphql  removeItemFromHidden.graphql  renamePlaylist.graphql  setPlaylistToPublic.graphql  synthesisPlaylistBuild.graphql  updataPlaylist.graphql
zvuk_music/graphql/queries/: episodes.graphql  followingCount.graphql  getAllHiddenCollection.graphql  getArtists.graphql  getEpisodes.graphql  getFullTrack.graphql  getHiddenTracks.graphql  getPlaylistTracks.graphql  getPlaylists.graphql  getPodcasts.graphql  getReleases.graphql  getShortPlaylist.graphql  getStream.graphql  getTracks.graphql  listenedEpisodes.graphql  listeningHistory.graphql  notificationsHasUnread.graphql  profileFollowersCount.graphql  quickSearch.graphql  search.graphql  synthesisPlaylist.graphql  userCollection.graphql  userPaginatedPodcasts.graphql  userPlaylists.graphql  userTracks.graphql
zvuk_music/models/: __init__.py  artist.py  book.py  collection.py  common.py  playlist.py  podcast.py  profile.py  release.py  search.py  stream.py  track.py
zvuk_music/utils/: __init__.py  graphql.py  request.py  request_async.py  response.py
